--- a/Front-End/Image-Converter/src/app/gallery-images/gallery-images.component.html
+++ b/Front-End/Image-Converter/src/app/gallery-images/gallery-images.component.html
@@ -8,6 +8,11 @@
   
 
    <div class="headerDiv">
+
+    <div class ="back">
+      <button type="button" (click)='onSubmitGallery()'  class="btn btn-dark">Back</button>
+    </div>
+
     <div id="heading">
       <h1 class="text-heading"><b>{{selectedFolder}}</b></h1>
     </div>
