--- a/Front-End/Image-Converter/src/app/nav/nav.component.scss
+++ b/Front-End/Image-Converter/src/app/nav/nav.component.scss
@@ -18,7 +18,7 @@ mat-toolbar {
     height: 350%;
     //border-radius: 10px;
     margin: 16px;
-    margin-left: 32px;
+    // margin-left: 32px;
   
     padding: 16px;
   
