--- a/Front-End/Image-Converter/src/app/nav/nav.component.html
+++ b/Front-End/Image-Converter/src/app/nav/nav.component.html
@@ -35,6 +35,15 @@
 
 
     <div class="wrapper">
+      <style>
+        .wrapper{
+            background-image:url("assets/img/wallpaper.jpg");
+            background-attachment: fixed;
+            /* background-repeat:no-repeat;
+            background-size: cover; */
+        }
+
+      </style>
         <!-- Sidebar  -->
         <nav id="sidebar">
             <div class="sidebar-header">
@@ -64,7 +73,7 @@
                 <li>
                     <a (click)="onSubmitGallery()">
                       <button  mat-button class="menu-button">
-                        <mat-icon>history</mat-icon>
+                        <mat-icon>collections</mat-icon>
                         <span>Gallery</span>
                       </button>
                     </a>
