--- a/Front-End/Image-Converter/src/app/gallery-images/gallery-images.component.html
+++ b/Front-End/Image-Converter/src/app/gallery-images/gallery-images.component.html
@@ -53,13 +53,11 @@
       <div class="row">
 
 
-
           <div *ngIf="!loading" class="w3-row w3-container">
-            <div *ngFor="let tag of temp;index as i;">
-              <div class="searchImages" *ngIf ="text ==='' || nameArr[i].toLowerCase().includes(text) && nameArr[i]!=null">
+            <div *ngFor="let tag of temp ; index as i;">
+              <div class="searchImages" *ngIf ="text ==='' || nameArr[i].toLowerCase().includes(text) && nameArr[i]!=null ">
                 <div class="w3-col s4  w3-center w3-padding-large" data-aos="fade-up" data-aos-delay="200">
                   <div class="box">
-
                     <button id="imgButton" (click)="imageClick(i)">
                       <img id="imgLink" src={{uploadedImgProcessed[i]}} alt="response img" width="210" height="200" border="0" class="img-fluid">
                     </button>
@@ -77,12 +75,19 @@
                       <mat-label>Extracted Tags</mat-label>
                       <mat-chip-list #chipList aria-label="Tag selection">
 
-                        <mat-chip *ngFor="let tag1 of tag.tags;index as j" (removed)="remove(tag.name[j], tag.pos)" >
-                            {{tag.name[j]}}
-                            <button matChipRemove>
-                              <mat-icon>cancel</mat-icon>
-                            </button>
-                        </mat-chip>
+
+                        <div *ngFor="let tag1 of tag.tags;index as j">
+                          <div *ngIf="tag.name[j] != undefined">
+                            <mat-chip (removed)="remove(tag.name[j], tag.pos)" >
+
+                              {{tag.name[j]}}
+                              <button matChipRemove>
+                                <mat-icon>cancel</mat-icon>
+                              </button>
+
+                            </mat-chip>
+                          </div>
+                        </div>
 
                         <input placeholder="Add a new tag..."
                                [matChipInputFor]="chipList"
