--- a/Front-End/Image-Converter/src/app/nav/nav.component.html
+++ b/Front-End/Image-Converter/src/app/nav/nav.component.html
@@ -36,6 +36,8 @@
 
     <div class="wrapper">
 
+
+
       <style>
         .wrapper{
             background-image:url("assets/img/wallpaper.jpg");
@@ -43,7 +45,6 @@
             /* background-repeat:no-repeat;
             background-size: cover; */
         }
-
         
       </style>
 
@@ -76,7 +77,7 @@
                 <li>
                     <a (click)="onSubmitGallery()">
                       <button  mat-button class="menu-button">
-                        <mat-icon>collections</mat-icon>
+                        <mat-icon>history</mat-icon>
                         <span>Gallery</span>
                       </button>
                     </a>
