--- a/Front-End/Image-Converter/src/app/converter/converter.component.html
+++ b/Front-End/Image-Converter/src/app/converter/converter.component.html
@@ -1,26 +1,9 @@
-
-<!-- <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> -->
-<!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins"> -->
-
-<div class="heading-parent">
-  <div class="float-child">
+<!-- <div class="w3-container" id="uploadHistory" style="margin-top:5px">
   <h1 class="text-heading"><b>Upload Image</b></h1>
-</div>
-<div class="float-child" *ngIf="uploadSuccess">
-  <h1 class="text-heading-p"><b>Processed Image</b></h1>
-</div>
-</div>
-<div>
-  <br>
-  <br>
-  <br>
-</div>
-<div class = "uploadBox">
-<div class="w3-container" id="uploadHistory" style="margin-top:5px">
+  
+</div> -->
 
-  <!-- <hr style="width:50px;border:5px solid black" class="w3-round"> -->
-</div>
-
+<h1 class="text-heading"><b>Upload Image</b></h1>
 
 
 <!-- <div class="center" *ngIf="loading">
@@ -39,47 +22,52 @@
 <!-- <img id="load" *ngIf="loading" src="assets/loading.gif" width="400"/> -->
 <!-- <mat-spinner *ngIf="loading" id="spin" [diameter]="150" primary style="margin-top:50px;margin:0 auto;"></mat-spinner> -->
 
-
-<mat-card id="uploadcard" *ngIf="!loading" class="card" draggable="true" ngClass="{{ dragAreaClass }}">
-
-  <span id="drag">Drag files here
-    <a href="javascript:void(0)" (click)="file.click()"> or click to open </a>
-  </span>
-
-  <mat-card-content>
-    <input type="file" #file [multiple]="false" (change)="onFileChange($event)" style="display:none"/>
-    <!-- <br> -->
-    <hr>
+<div class="sameDiv">
 
 
-    <div class="dragged-files-wrapper" >
-      <img mat-card-image style="border: solid black 20px"  src={{displayImg}} alt="Graph Image" width="400" height="400">
-      <span class='imgtext-top' *ngIf="showDim && !loading">Image width: {{width}} px</span>
-      <span class='imgtext-bottom' *ngIf="showDim && !loading">Image width: {{width}} px</span>
-      <span class='imgtext-right' *ngIf="showDim && !loading">Image height: {{height}} px</span>
-      <span class='imgtext-left' *ngIf="showDim && !loading">Image height: {{height}} px</span>
-
+  <div class = uploadBox>
+    <mat-card id="uploadcard" *ngIf="!loading" class="card" draggable="true" ngClass="{{ dragAreaClass }}">
+    
+      <span id="drag">Drag files here
+        <a href="javascript:void(0)" (click)="file.click()"> or click to open </a>
+      </span>
+    
+      <mat-card-content>
+        <input type="file" #file [multiple]="false" (change)="onFileChange($event)" style="display:none"/>
+        <br>
+        <hr>
+    
+    
+        <div class="dragged-files-wrapper" >
+          <img mat-card-image class="box"  src={{displayImg}} alt="Graph Image">
+          <span class='imgtext-top' *ngIf="showDim && !loading">Image width: {{width}}px</span>
+          <span class='imgtext-bottom' *ngIf="showDim && !loading">Image width: {{width}}px</span>
+          <span class='imgtext-right' *ngIf="showDim && !loading">Image height: {{height}}px</span>
+          <span class='imgtext-left' *ngIf="showDim && !loading">Image height: {{height}}px</span>
+        </div>
+      </mat-card-content>
+    
+      <div class="error" *ngIf="error" style = "color:red;">{{error}}</div>
+    
+      <mat-card-actions>
+        <button  [disabled]="isDisabled" (click)="saveFiles()" class="w3-button w3-block w3-padding-large w3-blue w3-margin-bottom">
+          Upload
+        </button>
+      </mat-card-actions>
+    </mat-card>
     </div>
-  </mat-card-content>
-
-  <div class="error" *ngIf="error" style = "color:red;">{{error}}</div>
-
-  <mat-card-actions>
-    <button  [disabled]="isDisabled" (click)="saveFiles()" class="button-1">
-      Upload
-    </button>
-  </mat-card-actions>
-</mat-card>
-</div>
-
-
-<div class="m-4" *ngIf="loading">
-  <br>
-  <br>
-  <br>
-  <div class="progress">
-      <div id="loadingBar" class="progress-bar" style="width: 0%">
-          0%
+    
+    <!-- <div *ngIf="showDim && !loading"  class="textBox">
+      <h4>Image Dimensions</h4>
+      <p class="box-text-1">Image height: {{height}}px</p>
+      <p class="box-text-1">Image width: {{width}}px</p>
+    </div> -->
+    <div class="m-4" *ngIf="loading">
+              
+      <div class="progress">
+          <div id="loadingBar" class="progress-bar" style="width: 0%">
+              0%
+          </div>
       </div>
     </div>
     
@@ -113,39 +101,6 @@
     </div>
 
 
-
-<div *ngIf="loading">
-  <mat-stepper labelPosition="bottom" linear #stepper>
-    <mat-step [stepControl]="firstFormGroup" [editable]="false" >
-      <ng-template matStepLabel>Classify Image</ng-template>
-    </mat-step>
-    <mat-step [stepControl]="secondFormGroup" [editable]="false">
-      <ng-template matStepLabel>Clean Image</ng-template>
-    </mat-step>
-    <mat-step [stepControl]="secondFormGroup" [editable]="false">
-      <ng-template matStepLabel>Resize Image</ng-template>
-    </mat-step>
-    <mat-step [stepControl]="secondFormGroup" [editable]="false">
-      <ng-template matStepLabel>Add Watermark to Image</ng-template>
-    </mat-step>
-    <mat-step [stepControl]="secondFormGroup" [editable]="false">
-      <ng-template matStepLabel>Extract keywords from image</ng-template>
-    </mat-step>
-    <mat-step>
-      <ng-template matStepLabel>Done</ng-template>
-    </mat-step>
-  </mat-stepper>
-
-</div>
-
-
-<div id="progress" *ngIf="loading" hidden></div>
-<!-- Image Filters -->
-<!-- <div id="imageFilter" class="uploadBox" style="padding-left:140px"> -->
-  <div class="uploadBox" *ngIf="uploadSuccess" style="padding-left:140px">
- 
-    <!-- <p class='imgtext-top-filter' >Image width: 10 px</p> -->
-  <app-filter></app-filter>
 </div>
 
 
@@ -156,16 +111,13 @@
 
 <!--Image Annotation-->
 <div  *ngIf="uploadSuccess" class="comment-form-container">
-  <!-- <div  class="comment-form-container"> -->
-
-  <h1 class="text-heading-annotation" style="padding-top:20px"><b>Image Annotation</b></h1>
-  <!-- <hr />   -->
-
+  <h1 class="text-heading" style="padding-top:20px"><b>Image Annotation</b></h1>
+ 
   <div class="form-group-container">
     <form [formGroup]="form" (ngSubmit)="onComment()">
       <textarea id="commentsection" class="form-control" row="5" placeholder="Type in annotation..." rows="5" formControlName="comment">{{initialComment}}</textarea>
       <div style="padding:5px"></div>
-      <button class="button-annotation" style="border-radius:5px" type="submit" [disabled]="form.invalid">
+      <button class="w3-button w3-blue w3-small" style="border-radius:5px" type="submit" [disabled]="form.invalid">
         {{commentLabel}}
       </button>
     </form>
@@ -176,4 +128,3 @@
 <div id="conversionFormat">
   <app-conversion></app-conversion>
 </div>
-
