--- a/Front-End/Image-Converter/src/app/filter/filter.component.scss
+++ b/Front-End/Image-Converter/src/app/filter/filter.component.scss
@@ -2,7 +2,7 @@
 	font-size:  25px;
 	text-decoration: underline;
 	padding-bottom: 20px;
-	// padding-top: 20px;
+	padding-top: 20px;
   }
 
 .nav-header {
@@ -32,6 +32,15 @@
 	display: none;
 }
 
+#imageFilters{
+	margin-top: 10%;
+	margin-left: auto !important;
+    margin-right: auto !important;
+	padding-left:10%;
+}
+
+
+  
 .innertext::before {
   margin-right: 16px;
 }
@@ -43,85 +52,48 @@
 
 .imgborder{
   border-style: 20px solid black;
-}
 
 
-  .imgtext-top-filter{
-	white-space: nowrap;
-	position:absolute ;
-	right:-20px;
-	color: white;
-	top:402px;
-	font-family: "Lucida Console", "Courier New", monospace;
-  }
-
-  .imgtext-bottom-filter{
-	white-space: nowrap;
-	position:absolute ;
-	right:-20px;
-	color: white;
-	top:22px;
-	font-family: "Lucida Console", "Courier New", monospace;
-  }
-
-  .imgtext-right-filter{
-	white-space: nowrap;
+  .imgtext-bottom{
 	position:absolute;
-	right:-132px;
+	right:170px;
 	color: white;
-	writing-mode: vertical-rl;
-	text-orientation: mixed;
-	top:120px;
+	top:467px;
 	font-family: "Lucida Console", "Courier New", monospace;
   }
-
-  .imgtext-left-filter{
-	white-space: nowrap;
+  
+  .imgtext-top{
+	  overflow: hidden;
+	position:absolute;
+	right:170px;
+	color: black;
+	top: 100px;
+	font-family: "Lucida Console", "Courier New", monospace;
+  }
+  
+  .imgtext-left{
 	position:absolute;
 	right:180px;
 	color: white;
+	// writing-mode: sideways-lr;
+	// text-orientation: mixed;
 	transform: rotate(-90deg);
-	top:220px;
-	left:-54px;
+	top:90px;
+	left:-203px;
 	font-family: "Lucida Console", "Courier New", monospace;
   }
-
-
-
-/* CSS */
-.button-1 {
-  background-color: black;
-  border-radius: 5px;
-  border-style: none;
-  box-sizing: border-box;
-  color: #FFFFFF;
-  cursor: pointer;
-  display: inline-block;
-  font-family: "Haas Grot Text R Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  font-weight: 500;
-  height: 40px;
-  width:120px;
-  line-height: 20px;
-  list-style: none;
-  margin: 0;
-  outline: none;
-  padding: 10px 16px;
-  position: relative;
-  text-align: center;
-  text-decoration: none;
-  transition: color 100ms;
-  vertical-align: baseline;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
+  
+  .imgtext-right{
+	position:absolute;
+	right:180px;
+	color: white;
+	writing-mode: vertical-rl;
+	text-orientation: mixed;
+	top:180px;
+	right:21px;
+	font-family: "Lucida Console", "Courier New", monospace;
+  }
 }
 
-.button-1:hover,
-.button-1:focus {
-  background-color: grey;
-}
 
-#processedImg{
-	padding-top: 24px;
-}
+
