--- a/Front-End/Image-Converter/src/app/shared-image/shared-image.component.scss
+++ b/Front-End/Image-Converter/src/app/shared-image/shared-image.component.scss
@@ -1,3 +1,9 @@
+.text-heading{
+  font-size:  25px;
+  text-decoration: underline;
+  padding-bottom: 20px;
+}
+
 .center {
   height: 100%;
   width: 100%;
