Revert "Revert "💄(html/css): Fixing upload page""
This reverts commit 41034912e2a265cd1b9ec5f32ed889f5dcefa266.

--- a/Front-End/Image-Converter/src/app/converter/converter.component.scss
+++ b/Front-End/Image-Converter/src/app/converter/converter.component.scss
@@ -1,12 +1,34 @@
+.heading-parent{
+  width: 50%; 
+  // padding-bottom: 50px;
+
+}
+.float-child{
+  float: left; 
+    width: 50%; 
+}
 .text-heading{
-  font-size:  25px;
+  font-size:  30px;
   text-decoration: underline;
   padding-bottom: 20px;
-  width:50%;
+  position: relative;
+  white-space: nowrap;
+  margin-left: 8%; 
+
+
 }
+
+.text-heading-p{
+  font-size:  30px;
+  text-decoration: underline;
+  padding-bottom: 20px;
+  white-space: nowrap;
+  margin-left: 130%; 
+}
+
+
 #uploadcard {
     max-width: 450px;
-    // margin-left: 10px;
     margin-left:0%;
     margin-right: auto;
     background-color: #333333;
@@ -386,17 +408,17 @@ $stroke: 8px;
 
 .imgtext-bottom{
   position:absolute;
-  right:170px;
+  right:145px;
   color: white;
-  top:467px;
+  top:437px;
   font-family: "Lucida Console", "Courier New", monospace;
 }
 
 .imgtext-top{
   position:absolute;
-  right:170px;
+  right:145px;
   color: white;
-  top:84px;
+  top:56px;
   font-family: "Lucida Console", "Courier New", monospace;
 }
 
@@ -408,7 +430,7 @@ $stroke: 8px;
   // text-orientation: mixed;
   transform: rotate(-90deg);
   top:90px;
-  left:-203px;
+  left:-228px;
   font-family: "Lucida Console", "Courier New", monospace;
 }
 
@@ -419,9 +441,11 @@ $stroke: 8px;
   writing-mode: vertical-rl;
   text-orientation: mixed;
   top:180px;
-  right:21px;
+  right:10px;
   font-family: "Lucida Console", "Courier New", monospace;
 }
+
+
 
 .textBox{
   display: inline-block;
@@ -458,28 +482,121 @@ $stroke: 8px;
   }
 
 
-  .sameDiv{
-    overflow:hidden;
-    display: inline-block;
-  }
   .uploadBox{
-    // width:70%;
-    float: left;
     display: inline-block;
+    padding: 1rem 1rem;
+    vertical-align: middle;
   }
 
-  #imageFilters{
-    left:50%;
-  }
-
-  #commentsection{
-    width:20%;
-  }
-
-  .comment-form-container{
-    left:80%;
-  }
-
-  .socketLoader{
+  .filterBox{
+      display: inline-block;
+      padding: 1rem 1rem;
+      vertical-align: middle;
+      margin-left: 80%; 
+    }
+  
+    .button-1 {
+      background-color: black;
+      border-radius: 5px;
+      border-style: none;
+      box-sizing: border-box;
+      color: #FFFFFF;
+      cursor: pointer;
+      display: inline-block;
+      font-family: "Haas Grot Text R Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
+      font-size: 16px;
+      font-weight: 500;
+      height: 40px;
+      width:430px;
+      line-height: 20px;
+      list-style: none;
+      margin: 0;
+      outline: none;
+      padding: 10px 16px;
+      position: relative;
+      text-align: center;
+      text-decoration: none;
+      transition: color 100ms;
+      vertical-align: baseline;
+      user-select: none;
+      -webkit-user-select: none;
+      touch-action: manipulation;
+    }
     
-  }
+    .button-1:hover,
+    .button-1:focus {
+      background-color: grey;
+    }
+
+.dragged-files-wrapper{
+  padding-left: 10px;
+  padding-right: 10px;
+
+}
+
+.text-heading-annotation{
+  font-size:  30px;
+  text-decoration: underline;
+  padding-bottom: 20px;
+  position: relative;
+  white-space: nowrap;
+}
+
+.button-annotation {
+  background-color: #1E90FF;
+  border-radius: 5px;
+  border-style: none;
+  box-sizing: border-box;
+  color: #FFFFFF;
+  cursor: pointer;
+  display: inline-block;
+  font-family: "Haas Grot Text R Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  height: 40px;
+  width:160px;
+  line-height: 20px;
+  list-style: none;
+  margin: 0;
+  outline: none;
+  padding: 10px 16px;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  transition: color 100ms;
+  vertical-align: baseline;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.button-annotation:hover,
+.button-annotation:focus {
+  background-color: grey;
+}
+
+
+  //.sameDiv{
+   // overflow:hidden;
+  //  display: inline-block;
+  //}
+ // .uploadBox{
+    // width:70%;
+ //   float: left;
+  //  display: inline-block;
+  //}
+
+  //#imageFilters{
+  //  left:50%;
+  //}
+
+ //#commentsection{
+  //  width:20%;
+  //}
+
+  //.comment-form-container{
+  //  left:80%;
+  //}
+
+
+
