--- a/Front-End/Image-Converter/src/app/gallery-images/gallery-images.component.html
+++ b/Front-End/Image-Converter/src/app/gallery-images/gallery-images.component.html
@@ -5,7 +5,7 @@
 <div class="w3-container" id="uploadHistory" style="margin-top:5px">
 
 
-  
+
 
    <div class="headerDiv">
 
@@ -18,7 +18,8 @@
     </div>
 
     <div id="searchDiv">
-      <app-search (searchText)="textEntered($event)"></app-search>
+      <input type="text" [(ngModel)]="text" (input)="textEntered(text)">
+      <!-- <app-search [(ngModel)]="text" (searchText)="textEntered($event)"></app-search> -->
     </div>
 
     <!-- <div class="dropdown">
@@ -47,7 +48,7 @@
     <div class="wave"></div>
   </div>
 
- 
+
 
    <main id="main">
    <section id="values" class="values">
@@ -57,30 +58,56 @@
 
       <div class="row">
 
-       
 
-          <div *ngIf="!loading" class="w3-row w3-container">
-            <div *ngFor="let image of uploadedImgProcessed;index as i;">
-              <div class="searchImages" *ngIf ="text ==='' || (nameArr[i].toLowerCase().includes(text) && nameArr[i]!=null) || (tagArr[i].toLowerCase().includes(text)  && tagArr[i]!=null)">
-                <div class="w3-col s4  w3-center w3-padding-large" data-aos="fade-up" data-aos-delay="200">
-                  <div class="box">
-                    
-                    <button id="imgButton" (click)="imageClick(i)">
-                      <img id="imgLink" src={{uploadedImgProcessed[i]}} alt="response img" width="210" height="200" border="0" class="img-fluid">
-                    </button>
-                
-                    <h4>{{nameArr[i]}}</h4>
-                    <p hidden>{{tagArr[i]}}</p>
-                    
-                  </div>
-                </div>
-               </div>
+
+        <div *ngIf="!loading" class="w3-row w3-container">
+          <div *ngFor="let tag of temp | filter:text; index as i;">
+            <!--              <div class="searchImages"                   *ngIf="text ==='' || nameArr[i].toLowerCase().includes(text) && nameArr[i]!=null ">-->
+            <div class="w3-col s4  w3-center w3-padding-large" data-aos="fade-up" data-aos-delay="200">
+              <div class="box">
+                <button id="imgButton" (click)="imageClick(i)">
+                  <img id="imgLink" src={{uploadedImgProcessed[i]}} alt="response img" width="210" height="200"
+                        border="0" class="img-fluid">
+                </button>
+
+                <h4>{{nameArr[i]}}</h4>
+
+                <mat-form-field class="tag-list" appearance="fill">
+                  <mat-label>Extracted Tags</mat-label>
+                  <mat-chip-list #chipList aria-label="Tag selection">
+
+
+                    <div *ngFor="let tag1 of tag.tags;index as j">
+                      <div *ngIf="tag.name[j] != undefined">
+                        <mat-chip (removed)="remove(tag.name[j], tag.pos)">
+
+                          {{tag.name[j]}}
+                          <button matChipRemove>
+                            <mat-icon>cancel</mat-icon>
+                          </button>
+
+                        </mat-chip>
+                      </div>
+                    </div>
+
+                    <input placeholder="Add a new tag..."
+                            [matChipInputFor]="chipList"
+                            [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+                            [matChipInputAddOnBlur]="addOnBlur"
+                            (matChipInputTokenEnd)="add($event, tag.pos)">
+                  </mat-chip-list>
+                </mat-form-field>
+
+              </div>
             </div>
-          </div>
 
-      
-      </div>
-      
+          </div>
+        </div>
+
+
+
+    </div>
+
 
     </div>
 
