--- a/Front-End/Image-Converter/src/app/nav/nav.component.html
+++ b/Front-End/Image-Converter/src/app/nav/nav.component.html
@@ -30,7 +30,7 @@
         /* background-repeat:no-repeat;
         background-size: cover; */
     }
-    
+
   </style>
 
 
@@ -45,7 +45,7 @@
             /* background-repeat:no-repeat;
             background-size: cover; */
         }
-        
+
       </style>
 
         <!-- Sidebar  -->
@@ -53,7 +53,7 @@
             <div class="sidebar-header">
                 <img src="assets/img/HardCode.png" (click)="onSubmitWelcome()" alt="">
                 <h1 (click)="onSubmitWelcome()">Image-Converter</h1>
-                
+
             </div>
 
             <ul class="list-unstyled components">
@@ -64,7 +64,7 @@
                       <span>Upload</span>
                     </button>
                   </a>
-                    
+
                 </li>
                 <li>
                     <a (click)="onSubmitGraphing()">
@@ -81,7 +81,7 @@
                         <span>Gallery</span>
                       </button>
                     </a>
-                    
+
                 </li>
                 <li>
                     <a (click)="onSubmitUnrecognized()">
@@ -99,7 +99,7 @@
                       <span>Upload History</span>
                     </button>
                   </a>
-                  
+
               </li>
 
                 <li>
@@ -137,8 +137,8 @@
         </nav>
 
         <!-- Page Content  -->
-        
-        
+
+
 
         <div id="content">
 
@@ -152,7 +152,7 @@
             </div>
           </nav> -->
 
-            
+
 
             <!-- top navbar -->
             <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -167,11 +167,11 @@
                     </button>
 
                 </div>
-                
+
             </nav> -->
 
 
-            
+
         </div>
 
         <div class="content mat-elevation-z8">
@@ -196,5 +196,4 @@
 </body>
 
 </html>
- <app-footer></app-footer>
-  
+ <!-- <app-footer></app-footer> -->
