--- a/Front-End/Image-Converter/src/app/nav/nav.component.html
+++ b/Front-End/Image-Converter/src/app/nav/nav.component.html
@@ -77,7 +77,7 @@
                 <li>
                     <a (click)="onSubmitGallery()">
                       <button  mat-button class="menu-button">
-                        <mat-icon>history</mat-icon>
+                        <mat-icon>collections</mat-icon>
                         <span>Gallery</span>
                       </button>
                     </a>
